--- a/MyCity4Kids/MyCity4Kids/res/layout/choose_video_option_dialog.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/choose_video_option_dialog.xml
@@ -11,13 +11,24 @@
         android:id="@+id/headerLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
         android:layout_marginTop="23dp"
         android:paddingLeft="23dp"
         android:paddingRight="23dp"
         android:text="@string/videos.dialog.title"
         android:textColor="@color/videos.dialog.title"
         android:textSize="18sp"
+        app:fontName="oswald_regular.ttf" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/timeLimitTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="23dp"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp"
+        android:text=""
+        android:textSize="16sp"
+        android:visibility="invisible"
         app:fontName="oswald_regular.ttf" />
 
     <com.mycity4kids.widget.CustomFontTextView
