--- a/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
@@ -9,6 +9,7 @@
 
     <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/videoCarouselContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -66,7 +67,7 @@
                                 android:layout_alignParentTop="true"
                                 android:layout_centerInParent="true"
                                 android:contentDescription="@string/author_img"
-                                android:scaleType="fitXY" />
+                                android:scaleType="fitCenter" />
 
                             <View
                                 android:layout_width="match_parent"
@@ -240,7 +241,7 @@
                                 android:layout_alignParentTop="true"
                                 android:layout_centerInParent="true"
                                 android:contentDescription="@string/author_img"
-                                android:scaleType="fitXY" />
+                                android:scaleType="fitCenter" />
 
                             <View
                                 android:layout_width="match_parent"
@@ -414,7 +415,7 @@
                                 android:layout_alignParentTop="true"
                                 android:layout_centerInParent="true"
                                 android:contentDescription="@string/author_img"
-                                android:scaleType="fitXY" />
+                                android:scaleType="fitCenter" />
 
                             <View
                                 android:layout_width="match_parent"
@@ -588,7 +589,7 @@
                                 android:layout_alignParentTop="true"
                                 android:layout_centerInParent="true"
                                 android:contentDescription="@string/author_img"
-                                android:scaleType="fitXY" />
+                                android:scaleType="fitCenter" />
 
                             <View
                                 android:layout_width="match_parent"
@@ -762,7 +763,7 @@
                                 android:layout_alignParentTop="true"
                                 android:layout_centerInParent="true"
                                 android:contentDescription="@string/author_img"
-                                android:scaleType="fitXY" />
+                                android:scaleType="fitCenter" />
 
                             <View
                                 android:layout_width="match_parent"
@@ -883,6 +884,206 @@
                                 android:src="@drawable/ic_watch"
                                 android:visibility="gone" />
                         </RelativeLayout>
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/addVideoContainer"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:background="#f9f9f9">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginTop="8dp"
+                    card_view:cardCornerRadius="0dp"
+                    card_view:cardElevation="0dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/article_listing_item_border_bg">
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/txvArticleTitle6"
+                            android:gravity="center_vertical"
+                            android:paddingBottom="10dp"
+                            android:visibility="visible">
+
+                            <ImageView
+                                android:id="@+id/articleImageView6"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/article_listing.article_image"
+                                android:layout_alignParentTop="true"
+                                android:layout_centerInParent="true"
+                                android:background="#cce1e2e2"
+                                android:contentDescription="@string/author_img"
+                                android:scaleType="fitXY"
+                                android:visibility="visible" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/article_listing.article_image"
+                                android:layout_alignParentTop="true"
+                                android:background="#80000000"
+                                android:visibility="gone" />
+
+                            <ImageView
+                                android:id="@+id/videoIndicatorImageView6"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="60dp"
+                                android:src="@drawable/ic_videos"
+                                android:visibility="invisible" />
+
+                            <com.mycity4kids.widget.CustomFontTextView
+                                android:id="@+id/txvAuthorName6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/articleImageView6"
+                                android:layout_gravity="bottom"
+                                android:clickable="true"
+                                android:gravity="bottom"
+                                android:paddingBottom="5dp"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="5dp"
+                                android:paddingTop="8dp"
+                                android:singleLine="true"
+                                android:text=""
+                                android:textColor="@color/article_listing.author_name"
+                                android:textSize="12sp"
+                                card_view:fontName="open_sans.ttf" />
+
+                            <com.mycity4kids.widget.CustomFontTextView
+                                android:id="@+id/viewCountTextView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignLeft="@+id/txvAuthorName6"
+                                android:layout_below="@id/txvAuthorName6"
+                                android:layout_marginLeft="9dp"
+                                android:drawableLeft="@drawable/ic_views"
+                                android:drawablePadding="4dp"
+                                android:gravity="center"
+                                android:paddingLeft="2dp"
+                                android:text="0"
+                                android:textColor="@color/article_listing.stats"
+                                android:textSize="12sp"
+                                android:visibility="gone"
+                                card_view:fontName="open_sans.ttf" />
+
+                            <com.mycity4kids.widget.CustomFontTextView
+                                android:id="@+id/commentCountTextView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/viewCountTextView6"
+                                android:layout_alignTop="@+id/viewCountTextView6"
+                                android:layout_below="@id/txvAuthorName6"
+                                android:layout_marginLeft="11dp"
+                                android:layout_toRightOf="@+id/viewCountTextView6"
+                                android:drawableLeft="@drawable/ic_comments"
+                                android:drawablePadding="4dp"
+                                android:gravity="top"
+                                android:text="0"
+                                android:textColor="@color/article_listing.stats"
+                                android:textSize="12sp"
+                                android:visibility="gone"
+                                card_view:fontName="open_sans.ttf" />
+
+                            <com.mycity4kids.widget.CustomFontTextView
+                                android:id="@+id/recommendCountTextView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/viewCountTextView6"
+                                android:layout_alignTop="@+id/viewCountTextView6"
+                                android:layout_below="@id/txvAuthorName6"
+                                android:layout_marginLeft="11dp"
+                                android:layout_toRightOf="@+id/commentCountTextView6"
+                                android:drawableLeft="@drawable/ic_likes"
+                                android:drawablePadding="4dp"
+                                android:gravity="center"
+                                android:text="0"
+                                android:textColor="@color/article_listing.stats"
+                                android:textSize="12sp"
+                                android:visibility="gone"
+                                card_view:fontName="open_sans.ttf" />
+
+                            <ImageView
+                                android:id="@+id/bookmarkarticleImageView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignTop="@+id/txvAuthorName6"
+                                android:paddingBottom="10dp"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="10dp"
+                                android:paddingTop="15dp"
+                                android:src="@drawable/ic_bookmark"
+                                android:tint="@color/app_red"
+                                android:visibility="gone" />
+
+                            <ImageView
+                                android:id="@+id/watchLaterImageView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/bookmarkarticleImageView6"
+                                android:layout_alignLeft="@+id/bookmarkarticleImageView6"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignStart="@+id/bookmarkarticleImageView6"
+                                android:layout_alignTop="@+id/txvAuthorName6"
+                                android:paddingBottom="10dp"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="10dp"
+                                android:paddingTop="15dp"
+                                android:src="@drawable/ic_watch"
+                                android:visibility="gone" />
+
+                            <com.mycity4kids.widget.CustomFontTextView
+                                android:id="@+id/addVideoLabel"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_above="@+id/txvAuthorName6"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginBottom="18dp"
+                                android:padding="10dp"
+                                android:text="@string/add_article_or_video.upload_video"
+                                android:textColor="@color/article_listing.title"
+                                android:textSize="17sp"
+                                card_view:fontName="oswald_regular.ttf" />
+                        </RelativeLayout>
+
+                        <ImageView
+                            android:id="@+id/addVideoImageView1"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_centerInParent="true"
+                            android:background="@drawable/profile_camera_circle"
+                            android:padding="12dp"
+                            android:src="@drawable/ic_plus"
+                            android:tint="@color/white" />
+
+                        <com.mycity4kids.widget.CustomFontTextView
+                            android:id="@+id/txvArticleTitle6"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:padding="10dp"
+                            android:singleLine="false"
+                            android:text="@string/myprofile.section.videos_label"
+                            android:textColor="@color/article_listing.title"
+                            android:textSize="17sp"
+                            card_view:fontName="oswald_regular.ttf" />
+
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
             </FrameLayout>
