--- a/MyCity4Kids/MyCity4Kids/res/layout/video_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_listing_item.xml
@@ -47,7 +47,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
                     android:contentDescription="@string/author_img"
-                    android:scaleType="fitXY" />
+                    android:scaleType="fitCenter" />
 
                 <View
                     android:layout_width="match_parent"
