--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -1553,14 +1553,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/homeTextView"
-                android:drawableLeft="@drawable/drawer_video_red"
+                android:drawableLeft="@drawable/ic_mom_vlogs"
                 android:drawablePadding="20dp"
                 android:gravity="center_vertical"
                 android:paddingBottom="12dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="16dp"
                 android:paddingTop="12dp"
-                android:text="@string/all_videos.toolbar.title"
+                android:text="@string/myprofile.section.videos_label"
                 app:fontName="oswald.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
