--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_fragment.xml
@@ -82,7 +82,7 @@
         android:layout_gravity="right|bottom"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        app:fab_colorNormal="@color/short_story.blue"
-        app:fab_colorPressed="@color/short_story.blue"
+        app:fab_colorNormal="@color/app_red"
+        app:fab_colorPressed="@color/app_red"
         app:fab_icon="@drawable/ic_add_comments" />
 </RelativeLayout>
