--- a/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
@@ -133,6 +133,63 @@
                     android:textSize="16sp"
                     app:fontName="open_sans.ttf" />
 
+
+                <ImageView
+                    android:id="@+id/media"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_below="@id/commentDataTextView"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="20dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone" />
+
+                <LinearLayout
+                    android:id="@+id/dateContainermedia"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/media"
+                    android:orientation="horizontal">
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/replyCommentTextViewmedia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:clickable="true"
+                        android:padding="5dp"
+                        android:text="Reply"
+                        android:textColor="@color/ad.comment.date"
+                        android:textSize="14sp"
+                        android:visibility="gone"
+                        app:fontName="oswald.ttf" />
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/commentDateTextViewmedia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:padding="5dp"
+                        android:text="Date"
+                        android:textColor="@color/ad.comment.date"
+                        android:textSize="14sp"
+                        android:visibility="gone"
+                        app:fontName="oswald.ttf" />
+                </LinearLayout>
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/replyCountTextViewmedia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dateContainermedia"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="10dp"
+                    android:text="View All Replies"
+                    android:visibility="gone" />
+
+
                 <LinearLayout
                     android:id="@+id/dateContainer"
                     android:layout_width="wrap_content"
@@ -175,27 +232,39 @@
                 android:background="@color/light_underline"
                 android:visibility="gone" />
 
-            <com.mycity4kids.widget.CustomFontEditText
-                android:id="@+id/commentReplyEditText"
+            <LinearLayout
+                android:id="@+id/mediaContainer"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/separator"
-                android:background="@null"
-                android:gravity="top|start"
-                android:hint="@string/add_reply"
-                android:inputType="textCapSentences|textMultiLine"
-                android:lines="10"
-                android:maxLines="30"
-                android:minLines="5"
-                android:overScrollMode="always"
-                android:padding="15dp"
-                android:scrollbarStyle="insideInset"
-                android:scrollbars="vertical"
-                android:textColor="@color/ad.comments.edit_text"
-                android:textSize="15sp"
-                android:visibility="visible"
-                app:fontName="oswald_regular.ttf" />
+                android:orientation="vertical">
 
+                <com.mycity4kids.widget.CustomFontEditText
+                    android:id="@+id/commentReplyEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:gravity="top|start"
+                    android:hint="@string/add_reply"
+                    android:inputType="textCapSentences|textMultiLine"
+                    android:lines="10"
+                    android:maxLines="10"
+                    android:minLines="1"
+                    android:overScrollMode="always"
+                    android:padding="15dp"
+                    android:scrollbarStyle="insideInset"
+                    android:scrollbars="vertical"
+                    android:textColor="@color/ad.comments.edit_text"
+                    android:textSize="15sp"
+                    android:visibility="visible"
+                    app:fontName="oswald_regular.ttf" />
+
+                <ImageView
+                    android:id="@+id/postImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible" />
+            </LinearLayout>
         </RelativeLayout>
     </ScrollView>
 
@@ -205,6 +274,30 @@
         android:layout_height="1dp"
         android:layout_above="@+id/anonymousImageView"
         android:background="@color/light_underline" />
+
+    <ImageView
+        android:id="@+id/addMediaImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:padding="10dp"
+        android:src="@drawable/ic_add_image" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/addMediaTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/addMediaImageView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/addMediaImageView"
+        android:layout_toEndOf="@+id/addMediaImageView"
+        android:layout_toRightOf="@+id/addMediaImageView"
+        android:gravity="center_vertical"
+        android:paddingRight="10dp"
+        android:text="@string/groups.add_image" />
+
 
     <ImageView
         android:id="@+id/anonymousImageView"
@@ -236,6 +329,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:button="@drawable/language_selector_checkbox"
+        android:buttonTint="@color/app_red"
         android:checked="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
@@ -244,6 +338,109 @@
         android:paddingLeft="10dp"
         android:paddingRight="2dp"
         android:paddingTop="10dp"
-        android:textColor="@color/app_settings.edit_prefs.pref_lang_name"
+        android:textColor="@color/app_red"
         android:textSize="16sp" />
+
+    <RelativeLayout
+        android:id="@+id/chooseMediaTypeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/trans_gray"
+        android:clickable="true"
+        android:elevation="5dp"
+        android:fitsSystemWindows="true"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/custom_dialog_bg"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/headerLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="23dp"
+                android:layout_marginTop="23dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:text="@string/choose_article_image.toolbar.title"
+                android:textColor="@color/videos.dialog.title"
+                android:textSize="18sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/imageCameraTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:paddingTop="10dp"
+                android:text="Capture image from camera"
+                android:textColor="@color/videos.upload_option.camera"
+                android:textSize="18sp"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/imageGalleryTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:paddingTop="10dp"
+                android:text="Choose image from gallery"
+                android:textColor="@color/videos.upload_option.camera"
+                android:textSize="18sp"
+                app:fontName="oswald.ttf" />
+
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/videoCameraTextView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="23dp"-->
+            <!--android:paddingRight="23dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="Capture video from camera"-->
+            <!--android:textColor="@color/videos.upload_option.camera"-->
+            <!--android:textSize="18sp"-->
+            <!--app:fontName="oswald.ttf" />-->
+
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/videoGalleryTextView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="23dp"-->
+            <!--android:paddingRight="23dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="Choose video from gallery"-->
+            <!--android:textColor="@color/videos.upload_option.gallery"-->
+            <!--android:textSize="18sp"-->
+            <!--app:fontName="oswald.ttf" />-->
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/cancelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:paddingTop="10dp"
+                android:text="@string/videos.upload_option.cancel"
+                android:textColor="@color/videos.upload_option.cancel"
+                app:fontName="oswald_regular.ttf" />
+        </LinearLayout>
+
+    </RelativeLayout>
 </RelativeLayout>
