--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
@@ -67,6 +67,61 @@
             android:textSize="16sp"
             app:fontName="open_sans.ttf" />
 
+        <ImageView
+            android:id="@+id/media"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_below="@id/commentDataTextView"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/dateContainermedia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/media"
+            android:orientation="horizontal">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/replyCommentTextViewmedia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:clickable="true"
+                android:padding="5dp"
+                android:text="Reply"
+                android:textColor="@color/ad.comment.date"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/commentDateTextViewmedia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:padding="5dp"
+                android:text="Date"
+                android:textColor="@color/ad.comment.date"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:fontName="oswald.ttf" />
+        </LinearLayout>
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/replyCountTextViewmedia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dateContainermedia"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:text="View All Replies"
+            android:visibility="gone" />
+
         <LinearLayout
             android:id="@+id/dateContainer"
             android:layout_width="wrap_content"
