--- a/MyCity4Kids/MyCity4Kids/res/layout/grid_view_header.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/grid_view_header.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <HorizontalScrollView
         android:id="@+id/quickLinkContainer2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
