--- a/MyCity4Kids/MyCity4Kids/res/layout/report_text_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/report_text_poll_post_item.xml
@@ -345,10 +345,20 @@
         android:visibility="gone" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/reportedOtherTextView"
+        android:id="@+id/reportedReligiousTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/reportedUninterestingTextView"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Reported as Not Interesting - 2"
+        android:visibility="gone" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/reportedOtherTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/reportedReligiousTextView"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:text="Reported as Other - 0"
