--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
@@ -45,10 +45,22 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:singleLine="false"
-            android:text="Comment Title"
+            android:text=""
             android:textColor="@color/ad.comment.username"
             android:textSize="@dimen/ad_comments_username"
             app:fontName="oswald_regular.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/commentDateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_toEndOf="@+id/commentorUsernameTextView"
+            android:layout_toRightOf="@+id/commentorUsernameTextView"
+            android:text="Date"
+            android:textColor="@color/ad.comment.date"
+            android:textSize="14sp"
+            app:fontName="oswald.ttf" />
 
         <com.mycity4kids.widget.LinkifiedTextView
             android:id="@+id/commentDataTextView"
@@ -78,91 +90,158 @@
             android:scaleType="centerCrop"
             android:visibility="gone" />
 
+        <!--<LinearLayout-->
+            <!--android:id="@+id/dateContainermedia"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/media"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+                <!--android:id="@+id/replyCommentTextViewmedia"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:clickable="true"-->
+                <!--android:padding="5dp"-->
+                <!--android:text="Reply"-->
+                <!--android:textColor="@color/ad.comment.date"-->
+                <!--android:textSize="14sp"-->
+                <!--android:visibility="gone"-->
+                <!--app:fontName="oswald.ttf" />-->
+
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+                <!--android:id="@+id/commentDateTextViewmedia"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:padding="5dp"-->
+                <!--android:text="Date"-->
+                <!--android:textColor="@color/ad.comment.date"-->
+                <!--android:textSize="12sp"-->
+                <!--android:visibility="gone"-->
+                <!--app:fontName="oswald.ttf" />-->
+        <!--</LinearLayout>-->
+
+        <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/replyCountTextViewmedia"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/dateContainermedia"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="5dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="View All Replies"-->
+            <!--android:visibility="gone" />-->
+
+        <!--<LinearLayout-->
+        <!--android:id="@+id/dateContainer"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignLeft="@+id/commentorUsernameTextView"-->
+        <!--android:layout_alignStart="@+id/commentorUsernameTextView"-->
+        <!--android:layout_below="@+id/commentDataTextView"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<com.mycity4kids.widget.CustomFontTextView-->
+        <!--android:id="@+id/replyCommentTextView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="Reply"-->
+        <!--android:textColor="@color/ad.comment.date"-->
+        <!--android:textSize="14sp"-->
+        <!--app:fontName="oswald.ttf" />-->
+
+        <!--</LinearLayout>-->
+
         <LinearLayout
-            android:id="@+id/dateContainermedia"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/media"
-            android:orientation="horizontal">
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/replyCommentTextViewmedia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:clickable="true"
-                android:padding="5dp"
-                android:text="Reply"
-                android:textColor="@color/ad.comment.date"
-                android:textSize="14sp"
-                android:visibility="gone"
-                app:fontName="oswald.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/commentDateTextViewmedia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text="Date"
-                android:textColor="@color/ad.comment.date"
-                android:textSize="14sp"
-                android:visibility="gone"
-                app:fontName="oswald.ttf" />
-        </LinearLayout>
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/replyCountTextViewmedia"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/dateContainermedia"
-            android:paddingBottom="10dp"
-            android:paddingLeft="5dp"
-            android:paddingTop="10dp"
-            android:text="View All Replies"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/dateContainer"
+            android:id="@+id/upvoteContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/commentorUsernameTextView"
             android:layout_alignStart="@+id/commentorUsernameTextView"
-            android:layout_below="@+id/commentDataTextView"
+            android:layout_below="@+id/media"
+            android:layout_marginTop="15dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
             android:orientation="horizontal">
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/replyCommentTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text="Reply"
-                android:textColor="@color/ad.comment.date"
-                android:textSize="14sp"
-                app:fontName="oswald.ttf" />
+            <ImageView
+                android:id="@+id/upvoteImageVIew"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_upvote"
+                android:tint="@color/app_red" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/commentDateTextView"
+                android:id="@+id/upvoteTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text="Date"
-                android:textColor="@color/ad.comment.date"
-                android:textSize="14sp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:gravity="center"
+                android:text="20 Helpful"
+                android:textColor="@color/groups.grey"
+                android:textSize="12sp"
+                app:fontName="oswald.ttf" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/downvoteContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/media"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_toRightOf="@+id/upvoteContainer"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/downvoteImageVIew"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_downvote"
+                android:tint="@color/app_red" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/downvoteTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:gravity="center"
+                android:text="20 Helpful"
+                android:textColor="@color/groups.grey"
+                android:textSize="12sp"
                 app:fontName="oswald.ttf" />
         </LinearLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/replyCountTextView"
-            android:layout_width="match_parent"
+            android:id="@+id/replyCommentTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/dateContainer"
-            android:layout_below="@id/dateContainer"
-            android:paddingBottom="10dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/media"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:text="Reply"
+            android:textColor="@color/app_red"
+            android:textSize="14sp"
+            app:fontName="oswald.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/replyCountTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/upvoteContainer"
+            android:layout_below="@id/upvoteContainer"
+            android:layout_marginTop="6dp"
+            android:paddingBottom="6dp"
             android:paddingLeft="5dp"
-            android:paddingTop="10dp"
+            android:paddingTop="6dp"
             android:text="View All Replies"
             android:visibility="gone" />
 
