--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
@@ -91,48 +91,48 @@
             android:visibility="gone" />
 
         <!--<LinearLayout-->
-            <!--android:id="@+id/dateContainermedia"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/media"-->
-            <!--android:orientation="horizontal">-->
+        <!--android:id="@+id/dateContainermedia"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/media"-->
+        <!--android:orientation="horizontal">-->
 
-            <!--<com.mycity4kids.widget.CustomFontTextView-->
-                <!--android:id="@+id/replyCommentTextViewmedia"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:clickable="true"-->
-                <!--android:padding="5dp"-->
-                <!--android:text="Reply"-->
-                <!--android:textColor="@color/ad.comment.date"-->
-                <!--android:textSize="14sp"-->
-                <!--android:visibility="gone"-->
-                <!--app:fontName="oswald.ttf" />-->
+        <!--<com.mycity4kids.widget.CustomFontTextView-->
+        <!--android:id="@+id/replyCommentTextViewmedia"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:clickable="true"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="Reply"-->
+        <!--android:textColor="@color/ad.comment.date"-->
+        <!--android:textSize="14sp"-->
+        <!--android:visibility="gone"-->
+        <!--app:fontName="oswald.ttf" />-->
 
-            <!--<com.mycity4kids.widget.CustomFontTextView-->
-                <!--android:id="@+id/commentDateTextViewmedia"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:padding="5dp"-->
-                <!--android:text="Date"-->
-                <!--android:textColor="@color/ad.comment.date"-->
-                <!--android:textSize="12sp"-->
-                <!--android:visibility="gone"-->
-                <!--app:fontName="oswald.ttf" />-->
+        <!--<com.mycity4kids.widget.CustomFontTextView-->
+        <!--android:id="@+id/commentDateTextViewmedia"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="Date"-->
+        <!--android:textColor="@color/ad.comment.date"-->
+        <!--android:textSize="12sp"-->
+        <!--android:visibility="gone"-->
+        <!--app:fontName="oswald.ttf" />-->
         <!--</LinearLayout>-->
 
         <!--<com.mycity4kids.widget.CustomFontTextView-->
-            <!--android:id="@+id/replyCountTextViewmedia"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/dateContainermedia"-->
-            <!--android:paddingBottom="10dp"-->
-            <!--android:paddingLeft="5dp"-->
-            <!--android:paddingTop="10dp"-->
-            <!--android:text="View All Replies"-->
-            <!--android:visibility="gone" />-->
+        <!--android:id="@+id/replyCountTextViewmedia"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/dateContainermedia"-->
+        <!--android:paddingBottom="10dp"-->
+        <!--android:paddingLeft="5dp"-->
+        <!--android:paddingTop="10dp"-->
+        <!--android:text="View All Replies"-->
+        <!--android:visibility="gone" />-->
 
         <!--<LinearLayout-->
         <!--android:id="@+id/dateContainer"-->
@@ -157,7 +157,7 @@
         <!--</LinearLayout>-->
 
         <LinearLayout
-            android:id="@+id/upvoteContainer"
+            android:id="@+id/upvoteCommentContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/commentorUsernameTextView"
@@ -176,25 +176,25 @@
                 android:tint="@color/app_red" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/upvoteTextView"
+                android:id="@+id/upvoteCommentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:gravity="center"
-                android:text="20 Helpful"
+                android:text="0 Helpful"
                 android:textColor="@color/groups.grey"
                 android:textSize="12sp"
                 app:fontName="oswald.ttf" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/downvoteContainer"
+            android:id="@+id/downvoteCommentContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/media"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="16dp"
-            android:layout_toRightOf="@+id/upvoteContainer"
+            android:layout_toRightOf="@+id/upvoteCommentContainer"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:orientation="horizontal">
@@ -207,12 +207,12 @@
                 android:tint="@color/app_red" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/downvoteTextView"
+                android:id="@+id/downvoteCommentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:gravity="center"
-                android:text="20 Helpful"
+                android:text="0 Helpful"
                 android:textColor="@color/groups.grey"
                 android:textSize="12sp"
                 app:fontName="oswald.ttf" />
@@ -236,8 +236,8 @@
             android:id="@+id/replyCountTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/upvoteContainer"
-            android:layout_below="@id/upvoteContainer"
+            android:layout_alignLeft="@+id/upvoteCommentContainer"
+            android:layout_below="@id/upvoteCommentContainer"
             android:layout_marginTop="6dp"
             android:paddingBottom="6dp"
             android:paddingLeft="5dp"
